app/styles/components/contact_form.css
.contact-form {
    transition:
        box-shadow 100ms ease-in-out,
        outline-color 250ms ease-in-out,
        transform 250ms ease-in-out,
        opacity 250ms ease-in-out;
    border-radius: var(--radius-md);
}

.contact-form:focus-within {
    outline-color: var(--color-primary-a4);
    box-shadow:
        0 0 0 1px var(--color-neutral-a2),
        0 8px 24px -8px var(--color-neutral-a2);
    transform: translateY(-1px);
}

.contact-form__status {
    --border-color: transparent;

    border: 1px solid transparent;
    border-radius: var(--radius-md);
    background-color: var(--bg-color, transparent);

    transition:
        background-color 0.25s ease,
        border-color 0.25s ease,
        color 0.25s ease;
}

.contact-form__status:not([data-status="idle"]) {
    margin-block: var(--spacing-lg);
    margin-inline: var(--spacing-sm);
    padding: var(--spacing-lg);
}

